not correctly working, well stuck into monster refactor

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   z-index: 0;
 }
 
+#start-wrapper {
+  position: absolute;
+  width: 20vw;
+  top: 40vh;
+  left: 40vw;
+  z-index: 10;
+}
+
 #timer-wrapper {
   position: absolute;
   width: 10rem;
